--- a/Darts/Darts.fsproj
+++ b/Darts/Darts.fsproj
@@ -6,7 +6,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>29c369dc-d0a3-409f-9ded-c3bc5619fe14</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>WinExe</OutputType>
     <RootNamespace>Darts</RootNamespace>
     <AssemblyName>Darts</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
